# Agrotour

./: .gitignore  PHASE2A_COMPLETION_REPORT.md  README.md  SECURITY.md  api_contract.json  data.json  docker-compose.prod.yml  docker-compose.yml  load_data.py  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: codeql.yml
agrotour-desktop/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
agrotour-desktop/dist-electron/: main.js
agrotour-desktop/electron/: main.ts
agrotour-desktop/public/: Manifest.json  service-worker.ts
agrotour-desktop/src/: App.tsx  main.ts  styles.css
agrotour-desktop/src-tauri/: Cargo.toml  tauri.conf.json
agrotour-mobile/: app.json  eas.json  new.sh  package-lock.json  package.json  tsconfig.json
backend/: .env.example  Dockerfile  create_test_users.py  db.sqlite3  manage.py  requirements.txt
backend-sync/: .env.example  .gitignore  README.md  debug_output.txt  debug_output_2.txt  debug_output_3.txt  pyproject.toml  quickstart.py  spike_a_rls.py  test_output.txt
backend-sync/app/: __init__.py  database.py  main.py  middleware.py  models.py  schemas.py  sync_engine.py
backend-sync/tests/: test_integration.py  test_integration_clean.py  test_multi_entity_sync.py  test_sync.py
frontend-web/: .env.example  index.html  package-lock.json  package.json  setup-fase0.sh  tailwind.config.js  tsconfig.json  vite.config.ts
frontend2/: .env  ESTADO_DEL_PROYECTO.md  jsconfig.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  verify-fase0.js
(+291 files in other folders)
